Update logo syntax

--- a/week-2/my-berkshire-site.html
+++ b/week-2/my-berkshire-site.html
@@ -22,7 +22,7 @@ BERKSHIRE HATHAWAY INC. 3555 Farnam Street Suite 1440 Omaha, NE 68131 Official H
 		<li>Order Berkshire Activewear On-line</li>
 		<li>Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</li>
 	</ul>
-	![Geico Logo](img/geicoimg.gif)
+	![Geico Logo](imgs/geicoimg.gif)
 	<p>
 	FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY
 	WWW.GEICO.COM OR CALL 1-888-395-6349, 24 HOURS A DAY
