--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1.Michal Klimek
+2.Roche Janken
+We spent [1] hour on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -276,6 +276,6 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- Reflection: This was a great learning experience for me and helped boost my confidence using CSS. I was a little uneasy with margins, and padding and being able to use them successfully in this challenge provided me with a light bulb moment that brought it all together. In addition to that we used some cool positioning elements that I used before, but wasn't totally confident in how they functioned. Talking through it with my peer pairing partner helped cement those concepts. In general we did well with this challenge and it went a lot smoother than I thought it would going into it. -->
   </body>
 </html>
